nav bar collapsed fixed

--- a/styles.css
+++ b/styles.css
@@ -290,6 +290,11 @@ body{
     margin-left: 13.5%;
 }
 
+.hidden{
+    display: none;
+}
+
+/* FOOTER */
 .footer__links__link{
     padding: 10px;
     font-size: 1rem;
